--- a/Template.Web/Views/_ViewImports.cshtml
+++ b/Template.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Template.Web
 @using Template.Web.ViewModels  <!-- AMC - import Web ViewModels -->
-@using Template.Data.Models     <!-- AMC - import Data Models -->
+@using Template.Core.Models     <!-- AMC - import Data Models -->
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers 
 @addTagHelper *, Template.Web   
 
