--- a/Template.Web/Views/User/Login.cshtml
+++ b/Template.Web/Views/User/Login.cshtml
@@ -8,9 +8,9 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="EmailAddress" class="control-label"></label>
-        <input asp-for="EmailAddress" class="form-control"/>
-        <span asp-validation-for="EmailAddress" class="text-danger"></span>
+        <label asp-for="Email" class="control-label"></label>
+        <input asp-for="Email" class="form-control"/>
+        <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="form-group">
