--- a/Template.Web/Views/User/Login.cshtml
+++ b/Template.Web/Views/User/Login.cshtml
@@ -8,18 +8,18 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="Email" class="control-label"></label>
+        <label asp-for="Email" class="control-label"><i class="bi-person-fill"></i> Email</label>                 
         <input asp-for="Email" class="form-control"/>
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="Password" class="control-label"></label>
+    <div class="form-group mt-3">
+          <label asp-for="Password" class="control-label"><i class="bi-shield-lock-fill"></i> Password</label> 
         <input type="password" asp-for="Password" class="form-control"/>
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mt-3">
         <input type="submit" value="Login" class="btn btn-primary"/>
         <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Cancel</a>
     </div>
