--- a/Template.Web/Views/User/Manage.cshtml
+++ b/Template.Web/Views/User/Manage.cshtml
@@ -1,10 +1,12 @@
-@model UserRegisterViewModel
+@model UserManageViewModel
 
-<h3 class="mt-4 mb-4">Create Account</h3>
+<h3 class="mt-4 mb-4">Update Account</h3>
 
-<form asp-action="Register" method="post">
+<form asp-action="Manage" method="post">
    
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    <input asp-for="Id" type="hidden"/>
 
     <div class="form-group">
         <label asp-for="Name" class="control-label"><i class="bi-person-fill"></i> Name</label>
@@ -17,21 +19,7 @@
         <input asp-for="Email" class="form-control"/>
         <span asp-validation-for="Email" class="text-danger"></span>
     </div> 
-
-    <div class="row">
-        <div class="col form-group mt-3">
-            <label asp-for="Password" class="control-label"><i class="bi-shield-lock-fill"></i> Password</label>
-            <input type="password" asp-for="Password" class="form-control"/>
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-
-        <div class="col form-group mt-3">
-            <label asp-for="PasswordConfirm" class="control-label">Password Confirm</label>
-            <input type="password" asp-for="PasswordConfirm" class="form-control"/>
-            <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
-        </div>
-        </div>
-    
+   
     <div class="form-group mt-3">
         <label asp-for="Role" class="control-label"><i class="bi-person-badge-fill"></i> Role</label>    
         <select asp-for="Role" asp-items="Html.GetEnumSelectList<Role>()" class="form-control">
@@ -41,7 +29,7 @@
     </div>
    
     <div class="form-group mt-3">
-        <input type="submit" value="Register" class="btn btn-primary"/>
+        <input type="submit" value="Save" class="btn btn-primary"/>
         <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Cancel</a>
     </div>
 
