--- a/Template.Web/Views/User/UpdateProfile.cshtml
+++ b/Template.Web/Views/User/UpdateProfile.cshtml
@@ -1,12 +1,14 @@
-@model UserRegisterViewModel
+@model UserManageViewModel
 
 <div class="card shadow p-4 mt-4">
 
-    <h3 class="mb-3">Register</h3>
+    <h3 class="mb-3">Update Profile</h3>
 
-    <form asp-action="Register" method="post">
+    <form asp-action="UpdateProfile" method="post">
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+        <input asp-for="Id" type="hidden" />
 
         <div class="form-group">
             <label asp-for="Name" class="control-label"><i class="bi-person-fill"></i> Name</label>
@@ -20,20 +22,6 @@
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
 
-        <div class="row">
-            <div class="col form-group mt-3">
-                <label asp-for="Password" class="control-label"><i class="bi-shield-lock-fill"></i> Password</label>
-                <input type="password" asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-
-            <div class="col form-group mt-3">
-                <label asp-for="PasswordConfirm" class="control-label">Password Confirm</label>
-                <input type="password" asp-for="PasswordConfirm" class="form-control" />
-                <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
-            </div>
-        </div>
-
         <div class="form-group mt-3">
             <label asp-for="Role" class="control-label"><i class="bi-person-badge-fill"></i> Role</label>
             <select asp-for="Role" asp-items="Html.GetEnumSelectList<Role>()" class="form-control">
@@ -43,7 +31,7 @@
         </div>
 
         <div class="form-group mt-3">
-            <input type="submit" value="Register" class="btn btn-primary" />
+            <input type="submit" value="Save" class="btn btn-primary" />
             <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Cancel</a>
         </div>
 
